# htx-web3-hackathon

./: .gitignore  LICENSE  P0-共识文档-v0.2.md  P0-共识文档-v0.3.md  P0-共识文档-v0.4-最终定稿.md  P0-技术审计-v2.md  P0-框架概览-v0.5-工程定稿.md  P0-框架概览-v0.5.1-最终冻结.md  P0-资深架构师分析.md  README.md  The Oracle of Truth-ch.md  The Oracle of Truth-en.md  tech-roadmap-ch.md  tech-roadmap-en.md  基础概念.md  疑问.md  给Codex的Review反馈.md
.github/workflows/: ci.yml
docs/: README.md
docs/archive/: README.md
docs/integration/: demo-market-states.md  track-c-handoff.md
docs/mechanism/: market-admission-policy.md  p0-mechanism-closure.md  season-reward-policy.md
docs/notes/: basic-concepts.md  open-questions.md
docs/pitch/: demo-diagrams.md  pitch-narrative.md
docs/reports/: p08-final-completion-report.md
docs/roadmap/: tech-roadmap-ch.md  tech-roadmap-en.md
docs/status/: track-a-b-review.md
docs/submission/: demo-evidence.md  (+8 more)
veil-scout/: README.md
veil-scout/track-b-ai-oracle/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
veil-scout/track-b-ai-oracle/data/projects/: agentpay.json  veil-scout.json
veil-scout/track-b-ai-oracle/data/reports/: .gitkeep
veil-scout/track-b-ai-oracle/data/settlements/: .gitkeep
veil-scout/track-b-ai-oracle/scripts/: incubation_e2e.py
veil-scout/track-b-ai-oracle/src/track_b/: __init__.py  analyst.py  chain_client.py  cli.py  config.py  evidence.py  github_client.py  models.py  storage.py  verifier.py
veil-scout/track-b-ai-oracle/tests/: test_analyst.py  test_chain_client.py  test_evidence.py  test_github_client.py  test_verifier.py
(+123 files in other folders)
