[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veil-scout-track-b-ai-oracle"
version = "0.1.0"
description = "Track B AI analyst and settlement oracle CLI for Veil Scout P0."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "web3>=6.20.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
veil-track-b = "track_b.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
